--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,55 @@ logs/
 htmlcov/
 db.sqlite3
 db.sqlite3-*
+# OS
+.DS_Store
+Thumbs.db
+
+# Python
+__pycache__/
+*.py[cod]
+*.class
+*.pyo
+
+# Virtual envs
+.venv/
+venv/
+ENV/
+
+# Django
+*.log
+media/
+staticfiles/
+
+# SQLite (déjà)
+db.sqlite3
+db.sqlite3-*
+*.sqlite3
+*.sqlite3-shm
+*.sqlite3-wal
+
+# IDE/Editor
+.idea/
+.vscode/
+*.code-workspace
+
+# Coverage / test
+.coverage*
+htmlcov/
+.pytest_cache/
+.tox/
+.mypy_cache/
+
+# Node/Frontend
+node_modules/
+dist/
+build/
+
+# Env/Secrets
+.env
+.env.*
+*.env
+
+# Compiled assets
+*.min.js
+*.min.css
