Fix: Correction des erreurs de déploiement Render - Middleware et variables d'environnement

--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,14 @@ services:
     name: appli-kbis
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install -r requirements.txt && python manage.py collectstatic --noinput && python manage.py migrate
     startCommand: ./start_render.sh
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
       - key: DJANGO_SETTINGS_MODULE
         value: gestion_immobiliere.settings
+      - key: DEBUG
+        value: "False"
+      - key: ALLOWED_HOSTS
+        value: "appli-kbis.onrender.com,.onrender.com"
