--- a/render.yaml
+++ b/render.yaml
@@ -3,14 +3,22 @@ services:
     name: appli-kbis
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt && python manage.py collectstatic --noinput && python manage.py migrate
-    startCommand: ./start_render.sh
+    buildCommand: pip install -r requirements.txt && python manage.py migrate
+    startCommand: python manage.py runserver 0.0.0.0:$PORT
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.0
-      - key: DJANGO_SETTINGS_MODULE
-        value: gestion_immobiliere.settings
+      - key: DATABASE_URL
+        fromDatabase:
+          name: appli-kbis-db
+          property: connectionString
+      - key: SECRET_KEY
+        generateValue: true
       - key: DEBUG
         value: "False"
       - key: ALLOWED_HOSTS
         value: "appli-kbis.onrender.com,.onrender.com"
+      - key: RENDER
+        value: "true"
+
+databases:
+  - name: appli-kbis-db
+    plan: free
