CONFIGURATION RENDER OPTIMALE
 Scripts de déploiement automatisés :
- render-build.sh : Script de build complet avec migrations
- render.yaml : Configuration Render optimisée
- init_data.py : Initialisation automatique des données

 Processus de déploiement :
1. Installation des dépendances
2. Exécution des migrations (incluant paiements partiels)
3. Collecte des fichiers statiques
4. Création du superuser
5. Initialisation des données de base

 Résultat :
- Déploiement automatique et fiable
- Système de paiement partiel opérationnel
- Données initialisées automatiquement
- Configuration optimale pour Render

 PRÊT POUR LE DÉPLOIEMENT FINAL !

--- a/render.yaml
+++ b/render.yaml
@@ -2,23 +2,20 @@ services:
   - type: web
     name: appli-kbis
     env: python
+    buildCommand: "./render-build.sh"
+    startCommand: "gunicorn gestion_immobiliere.wsgi:application"
     plan: free
-    buildCommand: pip install -r requirements.txt && python manage.py migrate
-    startCommand: python manage.py runserver 0.0.0.0:$PORT
     envVars:
+      - key: PYTHON_VERSION
+        value: 3.11.0
+      - key: SECRET_KEY
+        generateValue: true
+      - key: DEBUG
+        value: False
+      - key: ALLOWED_HOSTS
+        value: "appli-kbis.onrender.com,.onrender.com"
       - key: DATABASE_URL
         fromDatabase:
           name: appli-kbis-db
           property: connectionString
-      - key: SECRET_KEY
-        generateValue: true
-      - key: DEBUG
-        value: "False"
-      - key: ALLOWED_HOSTS
-        value: "appli-kbis.onrender.com,.onrender.com"
-      - key: RENDER
-        value: "true"
-
-databases:
-  - name: appli-kbis-db
-    plan: free
+    healthCheckPath: "/"
