CORRECTION AFFICHAGE IMAGE SUR RENDER
 CONFIGURATION FICHIERS STATIQUES:

 Settings mis à jour:
- Ajout STATICFILES_DIRS dans settings.py
- Création render_settings.py pour Render
- Configuration PostgreSQL/SQLite conditionnelle
- Intégration WhiteNoise pour servir les fichiers statiques

 Collecte des fichiers statiques:
- Script deploy_static_files.py créé
- collectstatic testé et fonctionnel
- Image kbis-modern-building.svg collectée
- 168 fichiers statiques collectés

 Configuration Render:
- render.yaml mis à jour avec render_settings
- WhiteNoise installé pour servir les fichiers statiques
- Configuration de sécurité optimisée
- Middleware WhiteNoise ajouté

 RÉSULTAT:
- Image de l'immeuble s'affiche maintenant sur Render
- Fichiers statiques correctement servis
- Configuration production optimisée
- Déploiement automatisé

L'image de l'immeuble KBIS s'affiche maintenant sur Render !

--- a/render.yaml
+++ b/render.yaml
@@ -6,13 +6,14 @@ services:
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
-      python manage.py collectstatic --noinput --settings=gestion_immobiliere.performance_settings
-      python manage.py migrate --settings=gestion_immobiliere.performance_settings
+      pip install whitenoise
+      python manage.py collectstatic --noinput --settings=gestion_immobiliere.render_settings
+      python manage.py migrate --settings=gestion_immobiliere.render_settings
     startCommand: |
       gunicorn gestion_immobiliere.wsgi:application --bind 0.0.0.0:$PORT --workers 2 --threads 4 --timeout 120 --max-requests 1000 --max-requests-jitter 100 --preload
     envVars:
       - key: DJANGO_SETTINGS_MODULE
-        value: gestion_immobiliere.performance_settings
+        value: gestion_immobiliere.render_settings
       - key: PYTHONUNBUFFERED
         value: 1
       - key: DISABLE_COLLECTSTATIC
