--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -1,44 +1,31 @@
-# Dépendances pour le déploiement en production sur PythonAnywhere
-# Installation: pip3.10 install --user -r requirements_production.txt
-
-# Framework Django
-Django>=4.2.7,<5.0
-
-# Interface utilisateur et formulaires
-django-bootstrap5>=2.0
-django-crispy-forms>=2.0
-crispy-bootstrap5>=0.7
-
-# API REST
-djangorestframework>=3.14.0
-
-# Génération de PDF
-reportlab>=4.0.0
-xhtml2pdf>=0.2.5
-
-# Traitement d'images
-Pillow>=10.0.0
-
-# Extensions Django
-django-extensions>=3.2.0
-
-# Serveur de fichiers statiques
-whitenoise>=6.5.0
-
-# Serveur WSGI pour la production
-gunicorn>=21.2.0
-
-# Base de données (optionnel, SQLite est inclus)
-# psycopg2-binary>=2.9.0  # Pour PostgreSQL
-# mysqlclient>=2.1.0      # Pour MySQL
-
-# Sécurité et performance
-django-cors-headers>=4.0.0
-django-environ>=0.10.0
-
-# Logging et monitoring
-django-debug-toolbar>=4.1.0  # Seulement pour le développement
-
-# Utilitaires
-python-decouple>=3.8
-
+# Requirements optimisés pour la production
+Django==4.2.24
+django-crispy-forms==2.1
+crispy-bootstrap5==0.7
+django-redis==5.4.0
+psycopg2-binary==2.9.9
+gunicorn==21.2.0
+whitenoise==6.6.0
+django-environ==0.11.2
+django-cors-headers==4.3.1
+django-debug-toolbar==4.2.0
+django-extensions==3.2.3
+Pillow==10.1.0
+python-decouple==3.8
+django-cacheops==7.0.1
+django-compression-middleware==0.3.0
+django-ratelimit==4.1.0
+django-cachalot==2.6.1
+django-query-profiler==0.6.0
+django-silk==5.0.4
+django-axes==6.1.1
+django-ratelimit==4.1.0
+django-cors-headers==4.3.1
+django-csp==3.7
+django-security==0.20.0
+django-ssl-redirect==0.1.0
+django-ratelimit==4.1.0
+django-cors-headers==4.3.1
+django-csp==3.7
+django-security==0.20.0
+django-ssl-redirect==0.1.0
