--- a/render.yaml
+++ b/render.yaml
@@ -1,22 +1,35 @@
+# Configuration Render pour KBIS INTERNATIONAL
 services:
   - type: web
     name: appli-kbis
     env: python
-    plan: starter
+    region: oregon  # ou frankfurt pour l'Europe
+    plan: starter  # ou standard/pro selon vos besoins
     buildCommand: |
-      pip install --upgrade pip
       pip install -r requirements.txt
-      pip install whitenoise
-      python manage.py collectstatic --noinput --settings=gestion_immobiliere.render_settings
-      python manage.py migrate --settings=gestion_immobiliere.render_settings
-    startCommand: |
-      gunicorn gestion_immobiliere.wsgi:application --bind 0.0.0.0:$PORT --workers 2 --threads 4 --timeout 120 --max-requests 1000 --max-requests-jitter 100 --preload
+      python manage.py collectstatic --noinput
+      python manage.py migrate
+    startCommand: gunicorn gestion_immobiliere.wsgi:application
     envVars:
-      - key: DJANGO_SETTINGS_MODULE
-        value: gestion_immobiliere.render_settings
-      - key: PYTHONUNBUFFERED
-        value: 1
-      - key: DISABLE_COLLECTSTATIC
-        value: 1
-    healthCheckPath: /utilisateurs/connexion-groupes/
-    autoDeploy: true
+      - key: DEBUG
+        value: False
+      - key: SECRET_KEY
+        generateValue: true
+      - key: DATABASE_URL
+        fromDatabase:
+          name: kbis-postgres
+          property: connectionString
+      - key: ALLOWED_HOSTS
+        value: appli-kbis.onrender.com
+      - key: STATIC_URL
+        value: /static/
+      - key: MEDIA_URL
+        value: /media/
+    healthCheckPath: /admin/
+
+databases:
+  - name: kbis-postgres
+    plan: starter  # Changer pour standard/pro selon vos besoins
+    databaseName: kbis_production
+    user: kbis_user
+    region: oregon  # ou frankfurt pour l'Europe
