feat: Renommer KBIS INTERNATIONAL en KBIS IMMOBILIER
- Template de connexion: Mise à jour du nom d'entreprise affiché
- Fichiers core: Mise à jour des commentaires et messages d'erreur
- Configuration: Mise à jour des fichiers de déploiement et de sécurité
- Documentation: Mise à jour des guides de déploiement Render
- Scripts: Mise à jour des messages de logging et de monitoring

Le nom 'KBIS IMMOBILIER' est maintenant cohérent dans toute l'application
et présente mieux l'identité de l'entreprise spécialisée dans l'immobilier.

--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,4 @@
-# Configuration Render pour KBIS INTERNATIONAL
+# Configuration Render pour KBIS IMMOBILIER
 services:
   - type: web
     name: appli-kbis
