--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-extensions==3.2.3
 Pillow==10.4.0
 reportlab==4.0.7
 openpyxl==3.1.2
+python-dateutil==2.8.2
 django-crispy-forms==2.1
 crispy-bootstrap5==0.7
 django-select2==8.1.0
