--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,6 @@ django-crispy-forms==2.1
 crispy-bootstrap5==0.7
 django-select2==8.1.0
 dj-database-url==2.1.0
+psycopg2-binary==2.9.9
 gunicorn==21.2.0
 whitenoise==6.6.0
