--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==4.2.7
+Django==4.2.24
 djangorestframework==3.14.0
 django-filter==23.5
 django-autocomplete-light==3.9.1
@@ -13,3 +13,5 @@ django-select2==8.1.0
 dj-database-url==2.1.0
 gunicorn==21.2.0
 whitenoise==6.6.0
+psycopg2-binary==2.9.9
+django-cors-headers==4.3.1
