--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,64 @@
-# Configuration Nginx pour KBIS IMMOBILIER - Production VPS
-# À placer dans /etc/nginx/sites-available/kbis_immobilier
+# Configuration Nginx pour KBIS Immobilier
+# Optimisée pour VPS avec PostgreSQL et Gunicorn
+
+upstream django_app {
+    server 127.0.0.1:8000;
+}
 
 server {
     listen 80;
-    server_name votre-domaine.com www.votre-domaine.com;
+    server_name _;
     
-    # Redirection HTTPS (décommentez après configuration SSL)
-    # return 301 https://$server_name$request_uri;
+    # Redirection vers HTTPS
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+    server_name _;
     
-    # Configuration pour HTTP (temporaire)
+    # Configuration SSL (à remplacer par vos certificats)
+    ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
+    ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+    
+    # Configuration SSL moderne
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    
+    # Headers de sécurité
+    add_header X-Frame-Options DENY;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-XSS-Protection "1; mode=block";
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    
+    # Taille maximale des uploads
+    client_max_body_size 100M;
+    
+    # Timeouts
+    proxy_connect_timeout 60s;
+    proxy_send_timeout 60s;
+    proxy_read_timeout 60s;
+    
+    # Fichiers statiques
+    location /static/ {
+        alias /home/kbis/appli_KBIS/staticfiles/;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+    
+    # Fichiers média
+    location /media/ {
+        alias /home/kbis/appli_KBIS/media/;
+        expires 1y;
+        add_header Cache-Control "public";
+    }
+    
+    # Application Django
     location / {
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://django_app;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -18,75 +66,7 @@ server {
         proxy_redirect off;
     }
     
-    # Configuration des fichiers statiques
-    location /static/ {
-        alias /var/www/kbis_immobilier/staticfiles/;
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-    
-    # Configuration des fichiers média
-    location /media/ {
-        alias /var/www/kbis_immobilier/media/;
-        expires 1y;
-        add_header Cache-Control "public";
-    }
-    
-    # Configuration des logs
-    access_log /var/log/nginx/kbis_immobilier_access.log;
-    error_log /var/log/nginx/kbis_immobilier_error.log;
-    
-    # Configuration de sécurité
-    client_max_body_size 10M;
-    client_body_timeout 60s;
-    client_header_timeout 60s;
-    
-    # Configuration des headers de sécurité
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    # Logs
+    access_log /var/log/nginx/kbis_access.log;
+    error_log /var/log/nginx/kbis_error.log;
 }
-
-# Configuration HTTPS (décommentez après configuration SSL)
-# server {
-#     listen 443 ssl http2;
-#     server_name votre-domaine.com www.votre-domaine.com;
-#     
-#     # Configuration SSL
-#     ssl_certificate /path/to/your/certificate.crt;
-#     ssl_certificate_key /path/to/your/private.key;
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#     ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
-#     ssl_prefer_server_ciphers off;
-#     ssl_session_cache shared:SSL:10m;
-#     ssl_session_timeout 10m;
-#     
-#     # Configuration du proxy
-#     location / {
-#         proxy_pass http://127.0.0.1:8000;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#         proxy_redirect off;
-#     }
-#     
-#     # Configuration des fichiers statiques
-#     location /static/ {
-#         alias /var/www/kbis_immobilier/staticfiles/;
-#         expires 1y;
-#         add_header Cache-Control "public, immutable";
-#     }
-#     
-#     # Configuration des fichiers média
-#     location /media/ {
-#         alias /var/www/kbis_immobilier/media/;
-#         expires 1y;
-#         add_header Cache-Control "public";
-#     }
-#     
-#     # Configuration des logs
-#     access_log /var/log/nginx/kbis_immobilier_ssl_access.log;
-#     error_log /var/log/nginx/kbis_immobilier_ssl_error.log;
-# }
