--- a/render-simple.yaml
+++ b/render-simple.yaml
@@ -1,10 +1,9 @@
 services:
-  # Service web principal
   - type: web
     name: appli-kbis
     env: python
     plan: free
-    buildCommand: chmod +x build.sh && ./build.sh
+    buildCommand: pip install -r requirements_render.txt && python manage.py collectstatic --noinput && python manage.py migrate && python commande_rapide_render.py
     startCommand: gunicorn --bind 0.0.0.0:$PORT app:app
     envVars:
       - key: DJANGO_SETTINGS_MODULE
@@ -16,12 +15,3 @@ services:
       - key: ALLOWED_HOSTS
         value: appli-kbis.onrender.com,.onrender.com
     healthCheckPath: /
-
-  # Base de données PostgreSQL
-  - type: pserv
-    name: appli-kbis-db
-    env: postgresql
-    plan: free
-    region: oregon
-    databaseName: appli_kbis
-    databaseUser: appli_kbis_user
