--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,8 @@ whitenoise==6.6.0
 Pillow==10.4.0
 reportlab==4.0.7
 djangorestframework==3.14.0
+django-filter==23.5
 django-crispy-forms==2.1
 crispy-bootstrap5==0.7
+django-extensions==3.2.3
+python-decouple==3.8
