--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ python-dateutil==2.8.2
 djangorestframework==3.14.0
 django-filter==23.5
 openpyxl==3.1.2
+django-crispy-forms==2.1
+crispy-bootstrap5==0.7
