--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: appli-kbis-postgresql
     env: python
     buildCommand: "pip install -r requirements.txt && python manage.py collectstatic --noinput"
-    startCommand: "python manage.py migrate --fake-initial && gunicorn gestion_immobiliere.wsgi:application --bind 0.0.0.0:$PORT"
+    startCommand: "python migrate_smart.py && gunicorn gestion_immobiliere.wsgi:application --bind 0.0.0.0:$PORT"
     envVars:
       - key: DATABASE_URL
         value: postgresql://kbis_user:qN64K1DDSffwfTPThqEPgtsH5sVwwKGP@dpg-d3og40k9c44c73cvh1h0-a.oregon-postgres.render.com/kbis_immobilier
